--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -19,7 +19,7 @@ do not have to be local to the Bay Area or California to register for BMT.
 
 ## Registration Timeline
 
-Registration will open on **Monday, September 16 at 12:01 AM PT**. This year,
+Registration will open on **Monday, September 16 at 9:00 AM PT**. This year,
 registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
@@ -104,7 +104,7 @@ for students with less prior contest experience.
 
 #### Focus Tests (60 mins)
 
-There are four focus tests of 10 questions across four subjects --- Algebra,
+There are four focus tests of 10 questions across four subjects — Algebra,
 Geometry, Discrete Math, and Calculus. Each student can participate in two focus
 exams.
 
@@ -132,7 +132,7 @@ combination would.
 
 ### Tiebreakers
 
-This year, to streamline the event, we have a new automatic tiebreaker policy,
+To streamline the event, we have a new automatic tiebreaker policy this year,
 which works as follows:
 
 1. First, problems are ordered from **hardest** to **easiest**, based on the
@@ -293,7 +293,7 @@ disqualification.
 
 ### Can middle school students compete? What if I don’t have a team?
 
-Yes! BMT is open to any student in 8th grade or below, including those who
+Yes! BMT is open to any student in 12th grade or below, including those who
 haven’t entered high school. While students are allowed to compete as
 individuals, we highly recommend that students compete on a team of at least 4
 due to our scoring guidelines.
@@ -316,7 +316,7 @@ globe for competitors wishing to compete in a different time zone.
 
 Lunch is **not provided**. Students, coaches and parents are free to find food
 in Berkeley. Restaurants can be found on the south side of campus (~5 minute
-walk from home rooms) and downtown (~15 minute walk from home rooms).
+walk from rooms) and downtown (~15 minute walk from rooms).
 
 ### Where can I find parking / How can I get around Berkeley?
 
