--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -12,8 +12,8 @@ will consist of three rounds: Power, Individual, and Guts.
 
 BMT is open to high school students in **grades 12 or below**. In particular,
 there is **no lower age limit** to participate; advanced middle school students
-are welcome to compete. Coaches can register **up to 6 students per team**. You
-do not have to be local to the Bay Area or California to register for BMT.
+are welcome to compete. Teams may have up to 6 students. You do not have to be
+local to the Bay Area or California to register for BMT.
 
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
 
@@ -24,16 +24,16 @@ registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
-Due to capacity constraints, we will be limiting registration to 1,000
-participants. While we don't expect to reach this limit in Phase 1, we encourage
-coaches to register as soon as possible to guarantee space.
+Due to capacity constraints, we will limit registration to 1,000 participants.
+While we don't expect to reach this limit in Phase 1, we encourage coaches to
+register as soon as possible to guarantee space.
 {% end %}
 
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
 | ------------- | ------------------- | ----------------- | -------------------------------------------------------------------------------------- |
 | 9/16 – 9/30   | Phase 1             | $15               | Limited to 36 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
 | 10/1 – 10/14  | Phase 2             | $15               | No limit on seats per organization.<br>Shirts may be pre-ordered for $8 per student.   |
-| 10/15 – 10/26 | Adjustment          | $25               | Shirts are not guaranteed, but may be purchased day-of for $10.                        |
+| 10/15 – 10/26 | Late Registration   | $25               | Shirts are not guaranteed, but may be purchased day-of for $10.                        |
 
 \*All dates are in US Pacific Time. That is, Phase 2 registration ends at 11:59
 PM PT on 10/14/2024.
@@ -44,33 +44,33 @@ for a fee waiver.
 ## Student Eligibility
 
 - Students must be in **grade 12 or below** to be eligible for BMT.
-- Students do not have to be local to the California Bay Area or the U.S. to
+- Students do not have to be local to the Bay Area, California, or the U.S. to
   participate in BMT. However, we will offer BMT Online in either December or
-  January (TBA), which may be a better fit for some students.
-- Coaches may register multiple teams. We ask that **for every 2 teams, there is
-  at least 1 parent chaperone**.
+  January (TBA), which may be more convenient for some students.
+- Coaches may register multiple teams under the same organization. We ask that
+  organizations provide at least one adult chaperone for every two teams.
 
 ## How to Register
 
-Most pre- and post-contest operations, including registration, team formation,
-waivers, and score reports, should be performed on
-[ContestDojo](https://contestdojo.com/), an online math competition platform.
-For people unfamiliar with ContestDojo, we have a released a guide, which can be
-found here: [ContestDojo Guide].
+Most pre- and post-contest tasks, including registration, team assignments,
+signing of waivers, and viewing score reports, may be completed at
+[ContestDojo](https://contestdojo.com/), an online math competition platform. If
+you are unfamiliar with ContestDojo, please read our [ContestDojo Guide].
 
-**All contestants are required to have their parent/guardian sign UC Berkeley’s
-consent waivers through this portal. Contestants will NOT be allowed to take the
-contest without having a signed liability and consent to treatment waiver.**
+**All contestants under 18 are required to have their parent/guardian sign UC
+Berkeley's consent waivers through this portal. Contestants will NOT be allowed
+to take the contest without having a signed liability and consent to treatment
+waiver. Students 18 and over may self-sign these waivers.**
 
 Any questions about the ContestDojo portal should be directed to us at
 <team@berkeley.mt>.
 
-### Team Finder
+### Teammate Finder
 
 Students may register as a team of 1, however, it is beneficial to compete on a
 team of at least 4 due to our scoring guidelines. For students who do not have a
-full team, we organized a [Team-Finder] document. Follow all outlined steps in
-the document.
+full team, we have organized a [Teammate Finder] spreadsheet. Follow all
+outlined steps in the spreadsheet.
 
 ## Schedule
 
@@ -93,24 +93,25 @@ substantial previous mathematical background is expected.
 
 ### Individual Round
 
-For the Individual Round, students may choose to take either the General Test
-or two Focus Tests.
+For the Individual Round, students may choose to take either the General Test or
+two Focus Tests.
 
 #### General Test (90 mins)
 
-The General Test is an individual round consisting of questions across the
-various subjects that comprise the focus tests. This round is highly recommended
-for students with less prior contest experience.
+The General Test is an individual test consisting of questions across the
+various subjects that comprise the Focus Tests. This test is intended to be
+easier than the Focus Tests and is highly recommended for students with less
+prior contest experience.
 
 #### Focus Tests (60 mins)
 
-There are four focus tests of 10 questions across four subjects — Algebra,
-Geometry, Discrete Math, and Calculus. Each student can participate in two focus
-exams.
+There are four Focus Tests of 10 questions across four subjects — Algebra,
+Geometry, Discrete (Combinatorics and Number Theory), and Calculus. Each student
+can participate in two Focus Tests.
 
 ### Guts Round (75 mins)
 
-The guts round consists of **9 sets of 3 problems** across various subjects in
+The Guts Round consists of **9 sets of 3 problems** across various subjects in
 math. The key feature of this round is that each set must be turned in before
 the next set is given. All teams can see a live scoreboard with their standings.
 
@@ -124,13 +125,16 @@ Team scores are determined based on a combination of teams' scores on the Guts
 and Power Rounds, as well as the Individual Round scores of their team members.
 The weights are displayed in the table in summary table below.
 
-When weighting team scores, scores for a given test will be normalized by
-either the top 10 scores or the top 10% score, whichever is greater.
-Additionally, if a student takes the General Test instead of the two Focus
-Tests, their score will only count for half as many points as the Focus
-combination would.
+When weighting team scores, scores for a given test will be normalized by either
+the average of the top 10 scores or the top 10% of scores, whichever represents
+more students/teams. Additionally, if a student takes the General Test instead
+of the two Focus Tests, their score will only count for half as many points as
+the Focus Test combinations would.
 
 ### Tiebreakers
+
+A tiebreaking procedure is employed for top awards for each test. Ties are not
+broken for honorable mentions or calculating overall team scores.
 
 To streamline the event, we have a new automatic tiebreaker policy this year,
 which works as follows:
@@ -139,25 +143,27 @@ which works as follows:
    number of correct submissions.
 1. The _n_-th hardest problem is assigned a **tiebreaking value** of
    2<sup>−*n*</sup>. For example, the hardest problem will have a tiebreaking
-   value of ½, the second hardest problem will have a tiebreaking value of ¼,
-   et cetera.
-1. Each student's **adjusted score** is calculated as the sum of
-   their original score and the tiebreaker values of the problems that they
-   correctly answered.
-1. Students are ordered by their adjusted scores, determining their **rank**.
+   value of ½, the second hardest problem will have a tiebreaking value of ¼, et
+   cetera.
+1. Each student's **tiebreaking index** is calculated as the sum of their
+   original score and the tiebreaker values of the problems that they correctly
+   answered.
+1. Students are ordered by their tiebreaking index, determining their tiebroken
+   rank.
 
 In simpler terms, among those tied for the same score, whoever solved the
 hardest problem is placed the highest, followed by the one who solved the next
-hardest, and so on. Note that tiebreakers only break ties for individual awards,
-not for honorable mentions or for calculating team scores.
+hardest, and so on.
 
 ### Additional Tiebreaker Procedure
 
-The automatic tiebreaking procedure may still fail to break ties — i.e., if two
-students correctly answered precisely the same set of problems. In this case,
-those students will be called in for an additional tiebreaker.
+If a tie remains on the Individual Round after the preceding automatic
+tiebreaking procedure -- i.e., if two students correctly answered precisely the
+same set of problems, then those students will participate in an additional
+Tiebreaker Round. Ties that remain on the Guts Round or Power Round will be
+tiebroken.
 
-This 15-minute test will consist of three questions, and be scored primarily on
+This 15-minute test will consist of five questions, and be scored primarily on
 correctness and secondarily on submission time; that is, an earlier submission
 will be worth more than a later one with the same number of correct answers, but
 less than a later one with more correct answers.
@@ -191,7 +197,7 @@ last submission will be considered.
       <th>Important Details</td>
       <td>Proof-based</td>
       <td colspan="2" class="text-center">
-       	Students may choose to participate in <strong>either</strong> the General Test or <strong>two</strong> separate Focus Tests, but not both
+        Students may choose to participate in <strong>either</strong> the General Test or <strong>two</strong> separate Focus Tests, but not both.
       </td>
       <td>Submitted and scored live in sets of 3</td>
     </tr>
@@ -225,9 +231,9 @@ last submission will be considered.
       <th>Important Scoring Notes</td>
       <td>N/A</td>
       <td colspan="2">
-        If teams have less than 4 members, the remaining scores will be counted as 0. The General Test will only count for half as many points as the Focus combinations
+        If a team has less than 4 members, scores of 0 will be added until the team has 4 Individual Round scores. The General Test will only count for half as many points as the Focus Test combinations.
       </td>
-      <td>Teams are live scored, and there will be a displayed scoreboard</td>
+      <td>Teams are scored live, and a scoreboard will be displayed.</td>
     </tr>
     <tr>
       <th>Collaboration?</td>
@@ -241,17 +247,18 @@ last submission will be considered.
 
 ### Acceptable Answers
 
-Students are responsible for familiarizing themselves with the
-[acceptable test formatting document](/assets/answer-formats.pdf) and
-[common notions document](/assets/common-notions.pdf) for details on how their
-answers should be submitted. Answers not submitted in the listed formats will be
-graded as incorrect, even if equivalent.
+Students are responsible for familiarizing themselves with the [acceptable
+answer formats document](/assets/answer-formats.pdf) and [common notions
+document](/assets/common-notions.pdf) for details on how their answers should be
+submitted. Answers not submitted in the listed formats will be graded as
+incorrect, even if equivalent.
 
 ## Activities
 
-After lunch, we will be hosting optional student activities that promote
-recreational math. Students that choose to participate will have the opportunity
-to win amazing prizes! Below are the activities we are expecting to run:
+After lunch, we will host optional student activities that promote recreational
+math and engage students in various ways. Students that choose to participate
+will have the opportunity to win amazing prizes! Below are the activities we
+expect to run:
 
 ### Estimathon
 
@@ -262,7 +269,7 @@ of 13 Fermi-style estimation problems.
 ### Fraudulent Math
 
 Attention all students! Mathematics is under attack by people who claim that we
-need “rigor” and “logic” to justify our answers. Join us for an event of
+need "rigor" and "logic" to justify our answers. Join us for an event of
 Fraudulent Math, where students will compete to come up with the most
 outlandish, mind bending proofs of false statements and to create impossible
 constructions.
@@ -291,43 +298,45 @@ answers will not be graded. Cheating in any form will not be tolerated, and
 failure to comply with all rules may result in immediate and irreversible
 disqualification.
 
-### Can middle school students compete? What if I don’t have a team?
+### Can middle school students compete? What if I don't have a team?
 
 Yes! BMT is open to any student in 12th grade or below, including those who
-haven’t entered high school. While students are allowed to compete as
+haven't entered high school. While students are allowed to compete as
 individuals, we highly recommend that students compete on a team of at least 4
 due to our scoring guidelines.
-
-To calculate the overall Individual score, we will take the average of every
-team member’s score on their individual portion if the team has 4, 5, or 6
-members. If the team has less than that many members, we will add 0’s until the
-team has reached at least 4 scores, of which we will take the average.
 
 ### How are awards handled?
 
 Awards will be physically presented to contestants at the closing ceremony.
 
-### I’m in a different timezone or non-local and can’t compete live. What are my options?
+### I'm in a different timezone or non-local and can't compete live. What are my options?
 
 There will be BMT Satellite competitions held through our partners across the
-globe for competitors wishing to compete in a different time zone.
+globe for competitors wishing to compete in a different time zone. Additionally,
+we may offer an online option for remote participation.
 
 ### Will lunch be provided?
 
-Lunch is **not provided**. Students, coaches and parents are free to find food
-in Berkeley. Restaurants can be found on the south side of campus (~5 minute
-walk from rooms) and downtown (~15 minute walk from rooms).
+We are exploring providing a lunch option for students, for example, sandwiches
+with vegan and vegeterian options. The expected price would be $12 per student.
+Please stay tuned if you are interested in this option.
+
+Students, coaches and parents are free to find food in Berkeley. Restaurants can
+be found on the south side of campus (~5 minute walk from rooms) and downtown
+(~15 minute walk from rooms).
 
 ### Where can I find parking / How can I get around Berkeley?
 
 BMT will not be providing parking or travel arrangements for students — it is up
 to coaches and/or parents to handle travel logistics. There are a number of
-parking garages around the campus, including Underhill Structure, Lower Hearst
-Structure, and the RSF garage. In addition, UC Berkeley campus is very public
-transport friendly.
+parking garages around the campus, including the Telegraph Channing Garage
+(recommended), Underhill Structure, Lower Hearst Structure, and the RSF garage.
+The Telegraph Channing Garage is cheaper than the campus-owned garages (and free
+up to an hour) and more conveniently located than most of the garages listed. In
+addition, UC Berkeley campus is very public transport friendly.
 
 If you are staying in Emeryville, Bus Line 36 will take you directly to campus,
 and the Downtown Berkeley BART station is next to campus.
 
-[Team-Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
+[Teammate Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
 [ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
