--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -103,7 +103,7 @@ various subjects that comprise the Focus Tests. This test is intended to be
 easier than the Focus Tests and is highly recommended for students with less
 prior contest experience.
 
-#### Focus Tests (60 mins)
+#### Focus Tests (50–60 mins)
 
 There are four Focus Tests of 10 questions across four subjects — Algebra,
 Geometry, Discrete (Combinatorics and Number Theory), and Calculus. Each student
@@ -218,7 +218,7 @@ last submission will be considered.
       <th>Duration</td>
       <td>90 mins</td>
       <td>90 mins</td>
-      <td>60 mins</td>
+      <td>50–60 mins</td>
       <td>75 mins</td>
     </tr>
     <tr>
@@ -317,13 +317,13 @@ we may offer an online option for remote participation.
 
 ### Will lunch be provided?
 
-We are exploring providing a lunch option for students, for example, sandwiches
-with vegan and vegeterian options. The expected price would be $12 per student.
-Please stay tuned if you are interested in this option.
-
 Students, coaches and parents are free to find food in Berkeley. Restaurants can
 be found on the south side of campus (~5 minute walk from rooms) and downtown
 (~15 minute walk from rooms).
+
+We are exploring providing a BMT-provided lunch option for students, for
+example, sandwiches with vegan and vegeterian options. The expected price would
+be $12 per student. Please stay tuned if you are interested in this option.
 
 ### Where can I find parking / How can I get around Berkeley?
 
