--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -321,9 +321,9 @@ Students, coaches and parents are free to find food in Berkeley. Restaurants can
 be found on the south side of campus (~5 minute walk from rooms) and downtown
 (~15 minute walk from rooms).
 
-We are exploring providing a BMT-provided lunch option for students, for
-example, sandwiches with vegan and vegeterian options. The expected price would
-be $12 per student. Please stay tuned if you are interested in this option.
+We are exploring a BMT-provided lunch option for students, for example,
+sandwiches with vegan and vegeterian options. The expected price would be $12
+per student. Please stay tuned if you are interested in this option.
 
 ### Where can I find parking / How can I get around Berkeley?
 
