fix orphan line

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -165,9 +165,9 @@ tiebroken.
 
 This 15-minute test will consist of either five (for the General Test) or three
 (for the Focus Tests) questions, and be scored primarily on correctness and
-secondarily on submission time; that is, an earlier submission will be worth
-more than a later one with the same number of correct answers, but less than a
-later one with more correct answers.
+secondarily on submission time; i.e. an earlier submission will be worth more
+than a later one with the same number of correct answers, but less than a later
+one with more correct answers.
 
 Students may submit multiple times within the duration of the test, but only the
 last submission will be considered.
