--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -163,8 +163,8 @@ same set of problems, then those students will participate in an additional
 Tiebreaker Round. Ties that remain on the Guts Round or Power Round will be
 tiebroken.
 
-This 15-minute test will consist of either five (for the General Test) or three
-(for the Focus Tests) questions, and be scored primarily on correctness and
+This 15-minute test will consist of either three (for the Focus Tests) or five
+(for the General Test) questions, and be scored primarily on correctness and
 secondarily on submission time; i.e. an earlier submission will be worth more
 than a later one with the same number of correct answers, but less than a later
 one with more correct answers.
