--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -24,10 +24,10 @@ registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
-Due to room constraints, we will limit the number of registrations. The exact
-limit is yet to be finalized, but it will be greater than 750 students. While we
-don't expect to reach this limit in Phase 1, we encourage coaches to register as
-soon as possible to guarantee space.
+Due to room constraints, there is a limited number of seats available for this
+event. The exact limit is yet to be finalized, but it will be greater than 750
+students. While we don't expect to reach this limit in Phase 1, we encourage
+coaches to register as soon as possible to guarantee space.
 {% end %}
 
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
