--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -68,7 +68,7 @@ Any questions about the ContestDojo portal should be directed to us at
 
 ### Teammate Finder
 
-Students may register as a team of 1, however, it is beneficial to compete on a
+Students may register as a team of 1. However, it is beneficial to compete on a
 team of at least 4 due to our scoring guidelines. For students who do not have a
 full team, we have organized a [Teammate Finder] spreadsheet. Follow all
 outlined steps in the spreadsheet.
@@ -76,7 +76,22 @@ outlined steps in the spreadsheet.
 ## Schedule
 
 Our event schedule is yet to be finalized, but we expect the tournament to start
-at 7:30 AM and end before 7:30 PM, with a lunch break in the middle.
+at 7:30 AM and end before 8:00 PM, with a lunch break in the middle.
+
+### Lunch
+
+This year, we are offering lunch for students, coaches, and parents at $12 per
+person, catered from [Crave Subs](https://www.cravesubs.com/), a sandwich store
+local to Berkeley. Those who wish to take this option **must pre-order on
+ContestDojo** through their coach. There are three menu items to choose from:
+
+- Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
+- Mr. Incredible — Pastrami, Crave Sauce, Lettuce, & Tomato
+- Vegan Marvin The Martian — Cucumbers, Pesto, Arugula, Crave Sauce, Lettuce, & Tomato
+
+Students, coaches and parents are also free to find their own food. Many
+restaurants can be found on the south side of campus (~5 minute walk from rooms)
+and in Downtown Berkeley (~15 minute walk from rooms).
 
 ## Contest Format
 
@@ -258,9 +273,8 @@ incorrect, even if equivalent.
 ## Activities
 
 After lunch, we will host optional student activities that promote recreational
-math and engage students in various ways. Students that choose to participate
-will have the opportunity to win amazing prizes! Below are the activities we
-expect to run:
+math and engage students in various ways. Participating students will have the
+opportunity to win prizes! Below are the activities we expect to run:
 
 ### Estimathon
 
@@ -316,16 +330,6 @@ Awards will be physically presented to contestants at the closing ceremony.
 There will be BMT Satellite competitions held through our partners across the
 globe for competitors wishing to compete in a different time zone. Additionally,
 we may offer an online option for remote participation.
-
-### Will lunch be provided?
-
-Students, coaches and parents are free to find food in Berkeley. Restaurants can
-be found on the south side of campus (~5 minute walk from rooms) and downtown
-(~15 minute walk from rooms).
-
-We are exploring a BMT-provided lunch option for students, for example,
-sandwiches with vegan and vegeterian options. The expected price would be $12
-per student. Please stay tuned if you are interested in this option.
 
 ### Where can I find parking / How can I get around Berkeley?
 
