fix(bmt-2024): revise wording and fix focus time

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -119,7 +119,7 @@ various subjects that comprise the Focus Tests. This test is intended to be
 easier than the Focus Tests and is highly recommended for students with less
 prior contest experience.
 
-#### Focus Tests (50–60 mins)
+#### Focus Tests (60 mins)
 
 There are four Focus Tests of 10 questions across four subjects — Algebra,
 Geometry, Discrete (Combinatorics and Number Theory), and Calculus. Each student
@@ -235,7 +235,7 @@ last submission will be considered.
       <th>Duration</td>
       <td>90 mins</td>
       <td>90 mins</td>
-      <td>50–60 mins</td>
+      <td>60 mins</td>
       <td>75 mins</td>
     </tr>
     <tr>
@@ -292,16 +292,15 @@ constructions.
 
 ### Integration Bee
 
-The hypest activity at BMT: compete head to head against the best integrators
-around! Students will face off in a tournament style bracket, solving difficult
-integrals involving some clever tricks, to determine who will be the champion of
-all integrators.
+Compete head to head against the best integrators around! Students will face off
+in a tournament style bracket, solving difficult integrals involving some clever
+tricks, to determine who will be the champion of all integrators.
 
 ### Origami
 
-Do you want to bring home a cute souvenir from BMT? Come join us for a fun
-origami session! We will be offering multiple paper patterns and instructions,
-and teaching from the basics of origami. No prior craft experience is needed!
+Want to bring home a cute souvenir from BMT? Come join us for a fun origami
+session! We will be offering multiple paper patterns and instructions, and
+teaching from the basics of origami. No prior craft experience is needed.
 
 ## Frequently Asked Questions
 
