fix(bmt-2024): reword parking section

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -330,18 +330,22 @@ There will be BMT Satellite competitions held through our partners across the
 globe for competitors wishing to compete in a different time zone. Additionally,
 we may offer an online option for remote participation.
 
-### Where can I find parking / How can I get around Berkeley?
+### Where can I find parking? How can I get to Berkeley?
 
-BMT will not be providing parking or travel arrangements for students — it is up
-to coaches and/or parents to handle travel logistics. There are a number of
-parking garages around the campus, including the Telegraph Channing Garage
-(recommended), Underhill Structure, Lower Hearst Structure, and the RSF garage.
-The Telegraph Channing Garage is cheaper than the campus-owned garages (and free
-up to an hour) and more conveniently located than most of the garages listed. In
-addition, UC Berkeley campus is very public transport friendly.
+BMT does not provide travel or parking for students — coaches should arrange
+their own travel logistics. There are a number of parking garages around campus,
+including the Telegraph-Channing Garage, Underhill Structure, Lower Hearst
+Structure, and the RSF Garage.
 
-If you are staying in Emeryville, Bus Line 36 will take you directly to campus,
-and the Downtown Berkeley BART station is next to campus.
+The Telegraph-Channing Garage is recommended for most people; it is cheaper than
+campus-owned garages (and free up to an hour) and more conveniently located than
+most of the garages listed.
+
+Berkeley is also public-transport-friendly. The Downtown Berkeley BART station
+is next to campus, and may be a good fit for those commuting from San Francisco
+or the East Bay. For teams staying in Emeryville, bus line 36 will take you
+directly to campus. Check the [AC Transit](https://www.actransit.org/) website
+for more options.
 
 [Teammate Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
 [ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
