--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -48,6 +48,8 @@ for a fee waiver.
 - Students do not have to be local to the Bay Area, California, or the U.S. to
   participate in BMT. However, we will offer BMT Online in either December or
   January (TBA), which may be more convenient for some students.
+    - For teams who are interested in booking a hotel room, we have a [Hotel Room
+	  Block] with discounted rates at the Hotel Shattuck Plaza. 
 - Coaches may register multiple teams under the same organization. We ask that
   organizations provide at least one adult chaperone for every two teams.
 
@@ -349,3 +351,4 @@ for more options.
 
 [Teammate Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
 [ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
+[Hotel Room Block]: https://reservations.hotelshattuckplaza.com/book/dates-of-stay?groupID=4491953
