--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -80,15 +80,17 @@ just across the bay from San Francisco. The Berkeley campus is a 5 to 10 minute
 walk from the Downtown Berkeley BART transit station, which connects directly to
 both the Oakland and San Francisco International Airports. Berkeley is also easily
 accessible by car. Information about parking can be found in our
-[FAQ](#where-can-i-find-parking?-how-can-i-get-to-berkeley?).
+[FAQ](#where-can-i-find-parking-how-can-i-get-to-berkeley).
 
 New this year, for teams who are interested in booking a hotel room, we
 have a [Hotel Room Block] with discounted rates at the Hotel Shattuck Plaza
 around contest weekend. 
 
-A map of campus can be found [here](https://www.berkeley.edu/map-pdf/campusmap.pdf).
-Note that the top of this map represents the eastern parts of campus. Google Maps is
-also usually reliable for navigating campus.
+A printable PDF map of campus can be found
+[here](https://www.berkeley.edu/map-pdf/campusmap.pdf), and more maps can be
+found at [berkeley.edu/map](https://www.berkeley.edu/map). Note that the top of
+this map represents the eastern parts of campus. Google Maps is also usually
+reliable for navigating campus.
 
 ## Schedule
 
