small travel edits and typoes

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -78,7 +78,7 @@ outlined steps in the spreadsheet.
 UC Berkeley is situated in the East Bay region of Northern California,
 just across the bay from San Francisco. The Berkeley campus is a 5 to 10 minute
 walk from the Downtown Berkeley BART transit station, which connects directly to
-both the Oakland and San Francisco International Airports. Berkeley is also easily
+both the Oakland and San Francisco airports. Berkeley is also easily
 accessible by car. Information about parking can be found in our
 [FAQ](#where-can-i-find-parking-how-can-i-get-to-berkeley).
 
@@ -89,7 +89,7 @@ around contest weekend.
 A printable PDF map of campus can be found
 [here](https://www.berkeley.edu/map-pdf/campusmap.pdf), and more maps can be
 found at [berkeley.edu/map](https://www.berkeley.edu/map). Note that the top of
-this map represents the eastern parts of campus. Google Maps is also usually
+the PDF map represents the eastern parts of campus. Google Maps is also usually
 reliable for navigating campus.
 
 ## Schedule
