--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -82,15 +82,17 @@ both the Oakland and San Francisco airports. Berkeley is also easily
 accessible by car. Information about parking can be found in our
 [FAQ](#where-can-i-find-parking-how-can-i-get-to-berkeley).
 
-New this year, for teams who are interested in booking a hotel room, we
-have a [Hotel Room Block] with discounted rates at the Hotel Shattuck Plaza
-around contest weekend. 
-
 A printable PDF map of campus can be found
 [here](https://www.berkeley.edu/map-pdf/campusmap.pdf), and more maps can be
 found at [berkeley.edu/map](https://www.berkeley.edu/map). Note that the top of
 the PDF map represents the eastern parts of campus. Google Maps is also usually
 reliable for navigating campus.
+
+### Hotels
+
+New this year, for teams who are interested in booking a hotel room, we
+have a [Hotel Room Block] with discounted rates at the Hotel Shattuck Plaza
+around contest weekend. 
 
 ## Schedule
 
