we plan to have more this year :0

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -295,7 +295,7 @@ incorrect, even if equivalent.
 
 After lunch, we will host optional student activities that promote recreational
 math and engage students in various ways. Participating students will have the
-opportunity to win prizes! Below are the activities we expect to run:
+opportunity to win prizes! Below are some of the activities we expect to run:
 
 ### Estimathon
 
