--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -94,7 +94,8 @@ reliable for navigating campus.
 
 New this year, for teams who are interested in booking a hotel room, we
 have a [Hotel Room Block] with discounted rates at the Hotel Shattuck Plaza
-around contest weekend. 
+around contest weekend. Teams wishing to join the hotel block must book by
+October 2.
 
 ## Schedule
 
