feat(bmt-2024): update count

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -24,12 +24,12 @@ registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
-Due to room constraints, we can accommodate a maximum of 1,000 students for BMT
-2024. Registration is first-come-first-serve. While we don't expect to reach
+Due to room constraints, we can accommodate a maximum of 1,000 students for
+BMT 2024. Registration is first-come-first-serve. While we don't expect to reach
 this limit in Phase 1, we encourage coaches to register as soon as possible to
 guarantee space.
 
-As of October 1, 2024, approximately 750 out of 1,000 seats have been filled.
+As of October 5, 2024, approximately 980 out of 1,000 seats have been filled.
 {% end %}
 
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
@@ -46,12 +46,12 @@ for a fee waiver.
 
 ## Student Eligibility
 
-- Students must be in **grade 12 or below** to be eligible for BMT.
-- Students do not have to be local to the Bay Area, California, or the U.S. to
-  participate in BMT. However, we will offer BMT Online in either December or
-  January (TBA), which may be more convenient for some students.
-- Coaches may register multiple teams under the same organization. We ask that
-  organizations provide at least one adult chaperone for every two teams.
+-   Students must be in **grade 12 or below** to be eligible for BMT.
+-   Students do not have to be local to the Bay Area, California, or the U.S. to
+    participate in BMT. However, we will offer BMT Online in either December or
+    January (TBA), which may be more convenient for some students.
+-   Coaches may register multiple teams under the same organization. We ask that
+    organizations provide at least one adult chaperone for every two teams.
 
 ## How to Register
 
@@ -109,9 +109,9 @@ person, catered from [Crave Subs](https://www.cravesubs.com/), a sandwich store
 local to Berkeley. Those who wish to take this option **must pre-order on
 ContestDojo** through their coach. There are three menu items to choose from:
 
-- Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
-- Mr. Incredible — Pastrami, Crave Sauce, Lettuce, & Tomato
-- Vegan Marvin The Martian — Cucumbers, Pesto, Arugula, Crave Sauce, Lettuce, & Tomato
+-   Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
+-   Mr. Incredible — Pastrami, Crave Sauce, Lettuce, & Tomato
+-   Vegan Marvin The Martian — Cucumbers, Pesto, Arugula, Crave Sauce, Lettuce, & Tomato
 
 Students, coaches and parents are also free to find their own food. Many
 restaurants can be found on the south side of campus (~5 minute walk from rooms)
