--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -24,12 +24,12 @@ registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
-Due to room constraints, we can accommodate a maximum of 1,000 students for
-BMT 2024. Registration is first-come-first-serve. While we don't expect to reach
-this limit in Phase 1, we encourage coaches to register as soon as possible to
+The team has worked some magic and we can now accommodate a maximum of 
+**1,050** students for BMT 2024. Registration is first-come-first-serve, so
+if you would like to attend we *strongly* encourage you to register now to
 guarantee space.
 
-As of October 5, 2024, approximately 980 out of 1,000 seats have been filled.
+As of October 5, 2024, approximately 1,015 out of 1,050 seats have been filled.
 {% end %}
 
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
