BMT 2024 Final Expansion

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -24,12 +24,14 @@ registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
-The team has worked some magic and we can now accommodate a maximum of 
-**1,050** students for BMT 2024. Registration is first-come-first-serve, so
-if you would like to attend we *strongly* encourage you to register now to
-guarantee space.
+Our Berkeley Magician Team has continued to magic and we can now accommodate a 
+maximum of **1,100** students for BMT 2024. However, we have run out of mana 
+power and are not powerful enough to expand further, so **this is the final 
+expansion**. If you would like to attend you must register now. We will maintain
+a waitlist once we reach capacity, but teams are not guaranteed to get off 
+the waitlist. 
 
-As of October 5, 2024, approximately 1,015 out of 1,050 seats have been filled.
+As of October 9, 2024, approximately 1,060 out of 1,100 seats have been filled.
 {% end %}
 
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
