bmt 2024 is out of capacity, sad

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -24,14 +24,11 @@ registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
-Our Berkeley Magician Team has continued to magic and we can now accommodate a 
-maximum of **1,100** students for BMT 2024. However, we have run out of mana 
-power and are not powerful enough to expand further, so **this is the final 
-expansion**. If you would like to attend you must register now. We will maintain
-a waitlist once we reach capacity, but teams are not guaranteed to get off 
-the waitlist. 
-
-As of October 9, 2024, approximately 1,060 out of 1,100 seats have been filled.
+Our Berkeley Magician Team has run out of magic and we can no longer expand
+capacity. As of October 10, 2024, **we have filled all 
+1,100 seats** and **registration is closed**. Please fill out the following 
+form if you would like to be added to the waitlist: 
+{% button_link(href="https://forms.gle/pEdsaa18GGQ3LzMYA") %} Waitlist Form {% end %}
 {% end %}
 
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
