--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -27,7 +27,7 @@ opportunity to register.
 Our Berkeley Magician Team has run out of magic and we can no longer expand
 capacity. As of October 10, 2024, **we have filled all 
 1,100 seats** and **registration is closed**. Please fill out the following 
-form if you would like to be added to the waitlist: https://forms.gle/pEdsaa18GGQ3LzMYA
+form if you would like to be added to the waitlist: [Waitlist Form](https://forms.gle/pEdsaa18GGQ3LzMYA)
 {% end %}
 
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
