feat(bmt-2024): add logistics update 1

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -16,6 +16,7 @@ are welcome to compete. Teams may have up to 6 students. You do not have to be
 local to the Bay Area or California to register for BMT.
 
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
+{% button_link(href="/news/bmt-2024-logistics-update-1/") %} Logistics Update 1 {% end %}
 
 ## Registration Timeline
 
@@ -25,8 +26,8 @@ opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
 Our Berkeley Magician Team has run out of magic and we can no longer expand
-capacity. As of October 10, 2024, **we have filled all 
-1,100 seats** and **registration is closed**. Please fill out the following 
+capacity. As of October 10, 2024, **we have filled all
+1,100 seats** and **registration is closed**. Please fill out the following
 form if you would like to be added to the waitlist: [Waitlist Form](https://forms.gle/pEdsaa18GGQ3LzMYA)
 {% end %}
 
