--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -15,8 +15,12 @@ there is **no lower age limit** to participate; advanced middle school students
 are welcome to compete. Teams may have up to 6 students. You do not have to be
 local to the Bay Area or California to register for BMT.
 
+This page contains primarily registration details. For detailed information on
+the schedule, rooms, and other day-of-tournament details, please visit our
+[Tournament Day Logistics] page.
+
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
-{% button_link(href="/news/bmt-2024-logistics-update-1/") %} Logistics Update 1 {% end %}
+{% button_link(href="/news/bmt-2024-logistics/") %} Tournament Day Logistics {% end %}
 
 ## Registration Timeline
 
@@ -45,12 +49,12 @@ for a fee waiver.
 
 ## Student Eligibility
 
--   Students must be in **grade 12 or below** to be eligible for BMT.
--   Students do not have to be local to the Bay Area, California, or the U.S. to
-    participate in BMT. However, we will offer BMT Online in either December or
-    January (TBA), which may be more convenient for some students.
--   Coaches may register multiple teams under the same organization. We ask that
-    organizations provide at least one adult chaperone for every two teams.
+- Students must be in **grade 12 or below** to be eligible for BMT.
+- Students do not have to be local to the Bay Area, California, or the U.S. to
+  participate in BMT. However, we will offer BMT Online in either December or
+  January (TBA), which may be more convenient for some students.
+- Coaches may register multiple teams under the same organization. We ask that
+  organizations provide at least one adult chaperone for every two teams.
 
 ## How to Register
 
@@ -98,8 +102,7 @@ October 2.
 
 ## Schedule
 
-Our event schedule is yet to be finalized, but we expect the tournament to start
-at 7:30 AM and end before 8:00 PM, with a lunch break in the middle.
+A detailed event schedule can be found on the [Tournament Day Logistics] page.
 
 ### Lunch
 
@@ -373,3 +376,4 @@ for more options.
 [Teammate Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
 [ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
 [Hotel Room Block]: https://reservations.hotelshattuckplaza.com/book/dates-of-stay?groupID=4491953
+[Tournament Day Logistics]: /news/bmt-2024-logistics/
