feat: add plank countdown

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -298,35 +298,8 @@ incorrect, even if equivalent.
 
 ## Activities
 
-After lunch, we will host optional student activities that promote recreational
-math and engage students in various ways. Participating students will have the
-opportunity to win prizes! Below are some activities we expect to run:
-
-### Estimathon
-
-A team-based contest that combines trivia, game theory, strategy, and
-mathematical thinking. Teams of ~3 will face a tight time limit to work on a set
-of 13 Fermi-style estimation problems.
-
-### Fraudulent Math
-
-Attention all students! Mathematics is under attack by people who claim that we
-need "rigor" and "logic" to justify our answers. Join us for an event of
-Fraudulent Math, where students will compete to come up with the most
-outlandish, mind bending proofs of false statements and to create impossible
-constructions.
-
-### Integration Bee
-
-Compete head to head against the best integrators around! Students will face off
-in a tournament style bracket, solving difficult integrals involving some clever
-tricks, to determine who will be the champion of all integrators.
-
-### Origami
-
-Want to bring home a cute souvenir from BMT? Come join us for a fun origami
-session! We will be offering multiple paper patterns and instructions, and
-teaching from the basics of origami. No prior craft experience is needed.
+Updated information about activities can be found on the
+[Tournament Day Logistics] page.
 
 ## Frequently Asked Questions
 
