--- a/content/news/2024-10-28_bmt-2024-logistics.md
+++ b/content/news/2024-10-28_bmt-2024-logistics.md
@@ -224,26 +224,32 @@ Additionally, we will have the following activites for parents.
 After the Guts Round, we will be hosting student activities. These are optional
 activities that promote recreational math, and include the following:
 
-- **Estimathon [Pauley Ballroom]** – A team-based contest that combines
+- **Estimathon [Pauley Ballroom]** — A team-based contest that combines
   trivia, game theory, strategy, and mathematical thinking. Teams of ~3 will be
   under a time limit to work on a set of 13 Fermi-style problems.
 
-- **Fraudulent Math [Dwinelle 79, 88]** – Attention all students,
+- **Fraudulent Math [Dwinelle 79, 88]** — Attention all students,
   mathematics is under attack by people who claim that we need “rigor” and
   “logic” to justify our answers. Join us for an event of Fraudulent Math, where
   we will compete to see who can come up with the most outlandish, mind bending
   proofs of false statements and who can create impossible constructions.
 
-- **Integration Bee [Dwinelle 182, 183]** – Hosted by our Diamond Sponsor
+- **Integration Bee [Dwinelle 182, 183]** — Hosted by our Diamond Sponsor
   [<b><span class="text-black">blackpen</span><span class="text-red-500">redpen</span></b>](https://www.youtube.com/c/blackpenredpen)!
   Compete head to head against the best integrators around! Students will face
   off in a tournament style bracket, solving difficult integrals involving some
   clever tricks, to determine who will be the champion of all integrators.
 
-- **Origami [Dwinelle 205, 206]** - Want to bring home a cute souvenir from BMT?
+- **Origami [Dwinelle 205, 206]** — Want to bring home a cute souvenir from BMT?
   Come join us for a fun origami session! We will be offering multiple paper
   patterns and instructions, and teaching from the basics of origami. No prior
   craft experience is needed.
+
+- **Plank Countdown (new!) [Wheeler 222]** — Miss the excitement of the
+  MATHCOUNTS® Countdown Round? Want to show off both your core strength and
+  mental math simultaneously in a countdown match... while planking? If you'd
+  enjoy that exciting and silly experience, come join us for our Plank Countdown
+  tournament!
 
 ## Awards
 
