fix: reword ending

--- a/content/news/2024-10-28_bmt-2024-logistics.md
+++ b/content/news/2024-10-28_bmt-2024-logistics.md
@@ -268,10 +268,10 @@ Awards room assignments are provided at check-in.
 
 ---
 
-Our team is hard at work finalizing the final details of the event. If you have
-any other questions or concerns before the tournament, you can reach us at
+Our team is hard at work finalizing the remaining details of the event. If you
+have any other questions or concerns before the tournament, you can reach us at
 <team@berkeley.mt>.
 
-We couldn't be more excited to see you at BMT this year. We hope you're excited too.
+We couldn't be more excited to see you at BMT this year. We hope you are too!
 
 ~ BMT Coordinators
