fix: reword online check in

--- a/content/news/2024-10-28_bmt-2024-logistics.md
+++ b/content/news/2024-10-28_bmt-2024-logistics.md
@@ -25,8 +25,8 @@ An annotated campus map is provided at the bottom of this page.
 {% alert(title="Online check-in available", status="info") %}
 Starting October 28, coaches can optionally begin the check-in process online on
 [ContestDojo](https://contestdojo.com) to save time on tournament day. We
-recommend all organizations that have finalized their rosters to try this
-process.
+recommend all organizations that are ready to check in to do so online before
+Saturday.
 
 If you check-in online, you must still show up at your assigned check-in
 location to pick up materials.
